prevent sidebar bottom content from being hidden on small screens

--- a/front_end/css/less/module/sidebar.less
+++ b/front_end/css/less/module/sidebar.less
@@ -87,12 +87,14 @@
     padding: 0 0 3.5em 0;
     width: 271px;
     line-height: 1.5714;
-    max-height: 80%; 
+    top: 100px;
+    bottom: 0;
     overflow-y: auto;
 }
 
-.open-definition {
-    top: 100px;
+.regs-meta {
+    padding-top: 1em;
+    
 }
 
 
